# saamba

./: .gitignore  TODOs  ftr_prediction_model_accuracy.joblib  goals_prediction_model_accuracy.joblib  hello.py  predictions.xlsx  predictions_goals.xlsx  pyproject.toml  requirements.txt
core/: admin.py  england.csv  forms.py  models.py  pred_model.ipynb  settlement.py  stat.py  tasks.py  test_data.csv  urls.py  views.py  y_pred.csv  y_test.csv
core/management/commands/: betpawa.py  calculate.py  clean_events.py  headtohead.py  ispwich-arsenal.html  leagues.py  leagues_goals.py  make_model.py  make_model_goals.py  populate_selections.py  process_betlinks.py  randomplace.py  setup_saamba.py  test.py  upcoming.py  use_model.py
core/management/commands/old/: betpawa.py  leagues.py  leagues_goals.py  make_model_goals.py
core/templates/core/: base.html  betlink_confirm_delete.html  betlink_detail.html  betlink_form.html  betlink_list.html  completed_event_list.html  event_detail.html  event_list.html  event_score_entry.html  home.html  manage.html  market_confirm_delete.html  market_detail.html  market_form.html  market_list.html  selections_confirm_delete.html  selections_detail.html  selections_form.html  selections_list.html
core/templatetags/: custom_filters.py
resultslips/: apps.py  models.py
samba/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
