[project]
name = "saamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-import-export>=4.2.0",
    "django>=5.1.2",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "scikit-learn>=1.5.2",
    "selenium>=4.26.1",
    "tqdm>=4.66.6",
    "webdriver-manager>=4.0.2",
    "xgboost>=2.1.2",
]
